--- a/scss/style.css
+++ b/scss/style.css
@@ -4,7 +4,7 @@ nav ul li a, .right_part .last_link a {
   list-style: none;
   color: #000;
   font-weight: 400;
-  padding: 14px 18px;
+  padding: 5px 15px;
   border: 1px solid transparent;
   font-size: 22px; }
 
@@ -28,6 +28,7 @@ body {
     .left_part {
       transform: rotate(0deg);
       width: 100%;
+      height: 40px;
       position: relative;
       top: 0;
       left: 50px;
@@ -46,7 +47,7 @@ body {
         transform: rotate(0);
         font-size: 12px;
         position: relative;
-        bottom: -30px; } }
+        bottom: -17px; } }
   .left_part p {
     font-size: 22px;
     font-weight: 700;
@@ -57,7 +58,7 @@ body {
       .left_part p {
         display: block;
         font-size: 12px;
-        margin: 15px 0 15px 40px; } }
+        margin: 0 0 5px 40px; } }
   .left_part span {
     font-size: 22px;
     font-weight: 400;
@@ -76,6 +77,7 @@ body {
   position: relative; }
   @media screen and (max-width: 767px) {
     .right_part {
+      background-image: url("../images/blow_img_mobile.png");
       width: 100%;
       float: none;
       height: 90vh; } }
@@ -95,6 +97,10 @@ body {
         width: 100%;
         height: 100%; }
 
+@media screen and (max-width: 375px) {
+  .right_part {
+    background-position-x: 50%; } }
+
 nav ul li {
   display: inline-block; }
   @media screen and (max-width: 767px) {
@@ -102,12 +108,14 @@ nav ul li {
       display: block; } }
   @media screen and (max-width: 767px) {
     nav ul li a {
-      padding: 10px 15px;
-      font-size: 12px; } }
+      padding: 5px 10px;
+      font-size: 17px;
+      color: #fff; } }
   nav ul li a:hover {
     background-color: #000;
     color: #fff;
-    border-radius: 5px; }
+    -webkit-border-radius: 100px 100px 100px 100px;
+    border-radius: 100px 100px 100px 100px; }
 
 .right_part .last_link a {
   color: #fff;
@@ -120,7 +128,7 @@ nav ul li {
   animation: jump 0.5s cubic-bezier(0.1, 0.25, 0.1, 1) 0s infinite alternate; }
   @media screen and (max-width: 767px) {
     .right_part .last_link a {
-      font-size: 12px;
+      font-size: 17px;
       padding: 5px 10px;
       bottom: 100px;
       left: 90px; } }
