--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ $color_white: #fff;
 $regular: 400;
 $bold: 700;
 $fs-22: 22px;
+$fs-17: 17px;
 $fs-12: 12px;
 
 @mixin max-screen($res) {
@@ -18,7 +19,7 @@ $fs-12: 12px;
   list-style: none;
   color: $color_black;
   font-weight: $regular;
-  padding: 14px 18px;
+  padding: 5px 15px;
   border: 1px solid transparent;
   font-size: $fs-22;
 }
@@ -43,6 +44,7 @@ body{
   @include max-screen(767px){
     transform: rotate(0deg);
     width: 100%;
+    height: 40px;
     position: relative;
     top: 0;
     left: 50px;
@@ -61,7 +63,7 @@ body{
       transform: rotate(0);
       font-size: $fs-12;
       position: relative;
-      bottom: -30px;
+      bottom: -17px;
     }
     }
   p {
@@ -73,7 +75,7 @@ body{
     @include max-screen(767px){
       display: block;
       font-size: $fs-12;
-      margin: 15px 0 15px 40px;
+      margin: 0 0 5px 40px;
     }
 
   }
@@ -95,6 +97,7 @@ body{
   float: right;
   position: relative;
   @include max-screen(767px){
+    background-image: url('../images/blow_img_mobile.png');
     width: 100%;
     float: none;
     height: 90vh;
@@ -119,6 +122,11 @@ body{
     }
   }
 }
+.right_part{
+  @include max-screen(375px){
+    background-position-x: 50%;
+  }
+}
 nav{
   ul{
     li{
@@ -129,15 +137,17 @@ nav{
       a{
         @extend %links;
         @include max-screen(767px){
-          padding: 10px 15px;
-          font-size: $fs-12;
+          padding: 5px 10px;
+          font-size: $fs-17;
+          color: $color_white;
         }
 
       }
       a:hover{
         background-color: $color_black;
         color: $color_white;
-        border-radius: 5px;
+        -webkit-border-radius: 100px 100px 100px 100px;
+        border-radius: 100px 100px 100px 100px;
       }
     }
   }
@@ -153,7 +163,7 @@ nav{
   left: 40%;
   animation: jump 0.5s cubic-bezier(0.1,0.25,0.1,1) 0s infinite alternate;
   @include max-screen(767px){
-    font-size: $fs-12;
+    font-size: $fs-17;
     padding: 5px 10px;
     bottom: 100px;
     left: 90px;
