--- a/scss/style.css
+++ b/scss/style.css
@@ -73,8 +73,12 @@ body {
   background-size: cover;
   height: 100vh;
   width: 95%;
+  text-align: center;
   float: right;
-  position: relative; }
+  position: relative;
+  /*@include max-screen(420px){
+    background-position-x: 60%;
+  }*/ }
   @media screen and (max-width: 767px) {
     .right_part {
       background-image: url("../images/blow_img_mobile.png");
@@ -83,7 +87,7 @@ body {
       height: 90vh; } }
   @media screen and (max-width: 420px) {
     .right_part {
-      background-position-x: 60%; } }
+      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpgsKg3Gp2RZEYQTF0kPvSYWX03FT__PHLng&usqp=CAU"); } }
   .right_part header {
     max-width: 85%;
     margin: auto;
@@ -99,6 +103,23 @@ body {
       .right_part header .logo_header img {
         width: 100%;
         height: 100%; }
+  .right_part .center_inscription {
+    display: none;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: 700;
+    color: #fff;
+    animation-name: flashing;
+    animation-duration: 5s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; }
+    @media screen and (max-width: 420px) {
+      .right_part .center_inscription {
+        display: block; } }
+    @media screen and (max-width: 320px) {
+      .right_part .center_inscription {
+        font-size: 40px; } }
 
 nav ul li {
   display: inline-block; }
@@ -175,5 +196,13 @@ nav ul li {
     left: 100%; }
   100% {
     left: 0; } }
+@keyframes flashing {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 1;
+    font-size: 30px; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=style.css.map */
