--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,6 +94,7 @@ body{
   background-size: cover;
   height: 100vh;
   width: 95%;
+  text-align: center;
   float: right;
   position: relative;
   @include max-screen(767px){
@@ -103,8 +104,11 @@ body{
     height: 90vh;
   }
   @include max-screen(420px){
-    background-position-x: 60%;
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpgsKg3Gp2RZEYQTF0kPvSYWX03FT__PHLng&usqp=CAU');
   }
+  /*@include max-screen(420px){
+    background-position-x: 60%;
+  }*/
   header {
     max-width: 85%;
     margin: auto;
@@ -122,6 +126,25 @@ body{
         width: 100%;
         height: 100%;
       }
+
+    }
+  }
+  .center_inscription{
+    display: none;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: $bold;
+    color: $color_white;
+    animation-name: flashing;
+    animation-duration: 5s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    @include max-screen(420px){
+      display: block;
+    }
+    @include max-screen(320px){
+      font-size: 40px;
     }
   }
 }
@@ -222,4 +245,17 @@ nav{
   100%{
     left: 0;
   }
+}
+@keyframes flashing {
+  0%{
+    opacity: 1;
+  }
+  50%{
+    opacity: 1;
+    font-size: 30px;
+  }
+  100%{
+    opacity: 1;
+  }
+  
 }
