--- a/scss/style.css
+++ b/scss/style.css
@@ -99,10 +99,15 @@ body {
         padding-top: 50px; } }
     .right_part header .logo_header {
       width: 104px;
-      height: 30px; }
+      height: 30px;
+      animation-name: flashing_logo;
+      animation-duration: 10s;
+      animation-delay: 0s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear; }
       .right_part header .logo_header img {
-        width: 100%;
-        height: 100%; }
+        width: 95%;
+        height: 95%; }
   .right_part .center_inscription {
     display: none;
     text-transform: uppercase;
@@ -204,5 +209,12 @@ nav ul li {
     font-size: 30px; }
   100% {
     opacity: 1; } }
+@keyframes flashing_logo {
+  0% {
+    background-color: transparent; }
+  50% {
+    background-color: #453021; }
+  100% {
+    background-color: transparent; } }
 
 /*# sourceMappingURL=style.css.map */
