--- a/scss/style.css
+++ b/scss/style.css
@@ -28,7 +28,7 @@ body {
     .left_part {
       transform: rotate(0deg);
       width: 100%;
-      height: 40px;
+      height: 5%;
       position: relative;
       top: 0;
       left: 50px;
@@ -81,7 +81,7 @@ body {
       background-image: url("../images/blow_img_mobile.png");
       width: 100%;
       float: none;
-      height: 90vh; } }
+      height: 95vh; } }
   @media screen and (max-width: 420px) {
     .right_part {
       background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpgsKg3Gp2RZEYQTF0kPvSYWX03FT__PHLng&usqp=CAU"); } }
