--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,7 +44,7 @@ body{
   @include max-screen(767px){
     transform: rotate(0deg);
     width: 100%;
-    height: 40px;
+    height: 5%;
     position: relative;
     top: 0;
     left: 50px;
@@ -101,7 +101,7 @@ body{
     background-image: url('../images/blow_img_mobile.png');
     width: 100%;
     float: none;
-    height: 90vh;
+    height: 95vh;
   }
   @include max-screen(420px){
     background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTpgsKg3Gp2RZEYQTF0kPvSYWX03FT__PHLng&usqp=CAU');
