height left part

--- a/scss/style.css
+++ b/scss/style.css
@@ -12,6 +12,7 @@ body {
   background-color: #fff;
   font-family: 'Montserrat', sans-serif;
   border-radius: 50px;
+  width: 100%;
   overflow: hidden; }
 
 .left_part {
