--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@ body{
   background-color: $color_white;
   font-family: 'Montserrat', sans-serif;
   border-radius: 50px;
+  width: 100%;
   overflow: hidden;
 }
 .left_part{
