--- a/scss/style.css
+++ b/scss/style.css
@@ -12,7 +12,6 @@ body {
   background-color: #fff;
   font-family: 'Montserrat', sans-serif;
   border-radius: 50px;
-  width: 100%;
   overflow: hidden; }
 
 .left_part {
@@ -28,6 +27,7 @@ body {
   @media screen and (max-width: 767px) {
     .left_part {
       transform: rotate(0deg);
+      overflow: hidden;
       width: 100%;
       height: 5%;
       position: relative;
@@ -73,7 +73,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  width: 95%;
+  width: 90%;
   text-align: center;
   float: right;
   position: relative; }
