--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,6 @@ body{
   background-color: $color_white;
   font-family: 'Montserrat', sans-serif;
   border-radius: 50px;
-  width: 100%;
   overflow: hidden;
 }
 .left_part{
@@ -44,6 +43,7 @@ body{
   animation-timing-function: linear;
   @include max-screen(767px){
     transform: rotate(0deg);
+    overflow: hidden;
     width: 100%;
     height: 5%;
     position: relative;
@@ -94,7 +94,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  width: 95%;
+  width: 90%;
   text-align: center;
   float: right;
   position: relative;
