--- a/scss/style.css
+++ b/scss/style.css
@@ -113,6 +113,7 @@ body {
     font-weight: 700;
     color: #fff;
     text-shadow: 0 10px 10px #0D0D0D;
+    margin-top: 200px;
     animation-name: flashing;
     animation-duration: 5s;
     animation-delay: 0s;
@@ -123,7 +124,8 @@ body {
         display: block; } }
     @media screen and (max-width: 320px) {
       .right_part .center_inscription {
-        font-size: 40px; } }
+        font-size: 40px;
+        margin-top: 100px; } }
     .right_part .center_inscription h1 {
       opacity: 0.8; }
 
